FIX Image Display is now OK in detail view

--- a/WEB/instaProject/instaProject/timeline/templates/base.html
+++ b/WEB/instaProject/instaProject/timeline/templates/base.html
@@ -10,6 +10,7 @@
   <header>
     <h1>instaProject</h1> {% if user.is_authenticated %} Hi {{ user.username }}!
     <a href="{% url 'timeline:index' %}">Latest posts</a>
+    <a href="{% url 'profile' %}">Your Profile</a>
     <a href="{% url 'logout' %}">logout</a> {% else %}
     <a href="{% url 'login' %}">login</a> {% endif %}
   </header>
