--- a/WEB/instaProject/instaProject/timeline/templates/timeline/detail.html
+++ b/WEB/instaProject/instaProject/timeline/templates/timeline/detail.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% block title %}Timeline{% endblock %} {% block content %}
 <h1>{{ post.description }}</h1>
-<img src="{{post.image}}" alt="img" width=300 height=300>
+<img src="{{ post.picture.url }}">
 <br />
 <br />
 <h2> Posted by : {{post.author}}</h2>
