--- a/WEB/instaProject/instaProject/timeline/templates/timeline/index.html
+++ b/WEB/instaProject/instaProject/timeline/templates/timeline/index.html
@@ -5,8 +5,10 @@
 {% if latest_post_list %}
 <ul>
   {% for post in latest_post_list %} {% if post.author == request.user %}
-  <li><a href="{% url 'timeline:detail' post.id %}">{{ post.description }}</a></li>
-  {% endif %} {% endfor %}
+  <li><a href="{% url 'timeline:detail' post.id %}">{{ post.description }}</a>
+  </li>
+  <p>Posted on: {{post.pub_date}}</p><br/>
+  <img src="{{ post.picture.url }}"> {% endif %} {% endfor %}
 </ul>
 {% else %}
 <p>No posts are available.</p>
